# api_base_template

./: .gitignore
migrations/2022-02-27-143019_add_users/: up.sql
migrations/2022-03-04-150426_auth_token/: up.sql
rate_limited_api/: Cargo.toml
rate_limited_api/migrations/2022-02-27-143019_add_users/: down.sql
rate_limited_api/src/: models.rs  schema.rs
rate_limited_api/src/actors/database/: mod.rs
rate_limited_api/src/actors/database/users/: mod.rs
rate_limited_api/src/api_handlers/auth/: sign_up.rs
rate_limited_api/src/api_handlers/utils/: token_gen.rs
rate_limited_api/src/db_utils/: handler.rs
rate_limited_api/src/middleware/: mod.rs
rate_limited_api/src/middleware/rate_limit/: mod.rs
rate_limited_api/src/models_structs/: ips.rs  mod.rs  tokens.rs  urls.rs
src/: main.rs
src/actors/database/ips/: mod.rs
src/actors/database/tokens/: mod.rs
src/actors/database/urls/: mod.rs
src/api_handlers/: mod.rs
src/api_handlers/auth/: sign_in.rs
src/api_handlers/dummy/: mod.rs
src/api_handlers/utils/: mod.rs
src/bootstrap_utils/: add_urls.rs  mod.rs
src/middleware/rbac/: mod.rs
src/models_structs/: users.rs
